# Coinroutes-Technical-Test

./: README.md  pyproject.toml
orderbooks/: main.py  utils.py
orderbooks/integrations/: constants.py  exchanges.py
orderbooks/tests/: helpers.py  test_main.py  test_utils.py
orderbooks/tests/integrations/: test_exchanges.py
