[tool.poetry]
name = "coinroutes_python_takehome"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^7.4.4"
click = "^8.1.7"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
